force-app/main/default/objects/Opportunity/fields/Loan_Purpose_ULR__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose_ULR__c</fullName>
    <label>Loan Purpose (ULR)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loan_Purpose_Unsecured</valueSetName>
    </valueSet>
</CustomField>