force-app/main/default/objects/Opportunity/fields/Loan_Request_Details_Complete_PK__c.field-meta.xml
<CustomField>
    <fullName>Loan_Request_Details_Complete_PK__c</fullName>
    <label>Loan Request Details Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>