force-app/main/default/objects/Opportunity/fields/Loan_Term_Months_Requested_Auto__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_Months_Requested_Auto__c</fullName>
    <label>Loan Term Months Requested Auto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>