force-app/main/default/objects/Opportunity/fields/Loan_to_Value_Auto__c.field-meta.xml
<CustomField>
    <fullName>Loan_to_Value_Auto__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan to Value AutoC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>