force-app/main/default/objects/Opportunity/fields/Loan_to_Value_CC__c.field-meta.xml
<CustomField>
    <fullName>Loan_to_Value_CC__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan to Value CC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>