force-app/main/default/objects/Opportunity/fields/Loan_to_ValueCC__c.field-meta.xml
<CustomField>
    <fullName>Loan_to_ValueCC__c</fullName>
    <label>Loan to ValueCC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>