force-app/main/default/objects/Opportunity/fields/Loan_to_ValueLOC__c.field-meta.xml
<CustomField>
    <fullName>Loan_to_ValueLOC__c</fullName>
    <label>Loan to ValueLOC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>