force-app/main/default/objects/Opportunity/fields/Make_and_Model_of_Motor_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Make_and_Model_of_Motor_Vehicle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Make and Model of Motor Vehicle</label>
    <length>40</length>
    <type>Text</type>
</CustomField>