force-app/main/default/objects/Opportunity/fields/Market_Value_of_Motor_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_of_Motor_Vehicle__c</fullName>
    <label>Market Value of Motor Vehicle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>