force-app/main/default/objects/Opportunity/fields/Minimum_MV_PP__c.field-meta.xml
<CustomField>
    <fullName>Minimum_MV_PP__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum MV,PP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>