force-app/main/default/objects/Opportunity/fields/Minimum_Payment_p_Credit_Limit_LOC__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Payment_p_Credit_Limit_LOC__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Payment p Credit Limit LOC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>