force-app/main/default/objects/Opportunity/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <formula
  >&quot;(&quot; + LEFT( Account.PersonContact.Mobile_Number__c, 3) + &quot;) &quot; + MID(Account.PersonContact.Mobile_Number__c, 4, 3) + &quot;-&quot; + MID(Account.PersonContact.Mobile_Number__c, 7, 4)</formula>
    <label>Mobile Phone</label>
    <type>Text</type>
</CustomField>