force-app/main/default/objects/Opportunity/fields/Monthly_JNGI_Motor_Premium_12th__c.field-meta.xml
<CustomField>
    <fullName>Monthly_JNGI_Motor_Premium_12th__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly JNGI Motor Premium 12th</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>