force-app/main/default/objects/Opportunity/fields/Monthly_Loan_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Loan_Payment__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Loan Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>