force-app/main/default/objects/Opportunity/fields/Monthly_Payment_Auto__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_Auto__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Payment Auto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>