force-app/main/default/objects/Opportunity/fields/Monthly_Premium_JNGI_Surecover__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Premium_JNGI_Surecover__c</fullName>
    <label>Monthly Premium JNGI Surecover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>