force-app/main/default/objects/Opportunity/fields/Monthly_Processing_Fees__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Processing_Fees__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Processing Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>