force-app/main/default/objects/Opportunity/fields/Moratorium_Term_Auto__c.field-meta.xml
<CustomField>
    <fullName>Moratorium_Term_Auto__c</fullName>
    <label>Moratorium Term Auto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>