force-app/main/default/objects/Opportunity/fields/Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Mortgage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if any opportunity products are mortgage based.</description>
    <label>Mortgage</label>
    <type>Checkbox</type>
</CustomField>