force-app/main/default/objects/Opportunity/fields/Mortgage_Path__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Path__c</fullName>
    <label>Mortgage Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Develop &amp; Interview</fullName>
            </value>
            <value>
                <fullName>Submit Loan</fullName>
            </value>
            <value>
                <fullName>Adjudication: Await Credit Decision</fullName>
            </value>
            <value>
                <fullName>Post Submission Contact- Re-Sumbit Loan</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Closing Step</fullName>
            </value>
            <value>
                <fullName>Opportunity Lost</fullName>
                <isActive>false</isActive>
                <label>Opportunity Lost</label>
            </value>
            <value>
                <fullName>Opportunity Won</fullName>
                <isActive>false</isActive>
                <label>Opportunity Won</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>