force-app/main/default/objects/Opportunity/fields/Mortgage_Test_path__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Test_path__c</fullName>
    <label>Mortgage Test path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Develop &amp; Interview</fullName>
            </value>
            <value>
                <fullName>Submit Loan</fullName>
            </value>
            <value>
                <fullName>Adjudication: Await Credit Decision</fullName>
            </value>
            <value>
                <fullName>Post Submission Contact- Re-Sumbit Loan</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Closing Step</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>