force-app/main/default/objects/Opportunity/fields/Motor_Vehicle_Depost__c.field-meta.xml
<CustomField>
    <fullName>Motor_Vehicle_Depost__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Motor Vehicle Depost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>