force-app/main/default/objects/Opportunity/fields/Name_of_Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Insurance_Provider__c</fullName>
    <label>Name of Insurance Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Other_Insurer_Assignment</valueSetName>
    </valueSet>
</CustomField>