force-app/main/default/objects/Opportunity/fields/Name_of_Valuer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Valuer__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Name of Valuer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>