force-app/main/default/objects/Opportunity/fields/Next_Date_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Next_Date_of_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Date of Contact</label>
    <type>Date</type>
</CustomField>