force-app/main/default/objects/Opportunity/fields/Number_of_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Applicants__c</fullName>
    <label>Number of Applicants</label>
    <summaryForeignKey>Applicant__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>