force-app/main/default/objects/Opportunity/fields/Occupancy_Type__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Type__c</fullName>
    <label>Occupancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Occupancy_Type</valueSetName>
    </valueSet>
</CustomField>