force-app/main/default/objects/Opportunity/fields/Opportunity_Generation_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Generation_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Opportunity Generation Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>