force-app/main/default/objects/Opportunity/fields/Other_Moratorium_Options_Auto__c.field-meta.xml
<CustomField>
    <fullName>Other_Moratorium_Options_Auto__c</fullName>
    <label>Other Moratorium Options Auto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintain Original Loan Term</fullName>
            </value>
            <value>
                <fullName>Extend Original Loan Term by moratorium period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>