force-app/main/default/objects/Opportunity/fields/Phoenix_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Phoenix_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phoenix Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>