force-app/main/default/objects/Opportunity/fields/picklist_Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>picklist_Preferred_Contact_Method__c</fullName>
    <formula>TEXT(Account.PersonContact.Preferred_Contact_Method__c )</formula>
    <label>Preferred Contact Method</label>
    <type>Text</type>
</CustomField>