force-app/main/default/objects/Opportunity/fields/Policy_Limit__c.field-meta.xml
<CustomField>
    <fullName>Policy_Limit__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>