force-app/main/default/objects/Opportunity/fields/Policy_Limit_Percent__c.field-meta.xml
<CustomField>
    <fullName>Policy_Limit_Percent__c</fullName>
    <label>LOC Limit Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>