force-app/main/default/objects/Opportunity/fields/Policy_Limit_Prior_to_Proposed_Cred__c.field-meta.xml
<CustomField>
    <fullName>Policy_Limit_Prior_to_Proposed_Cred__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Limit Prior to Proposed Cred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>