force-app/main/default/objects/Opportunity/fields/Preferred_Location__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Location__c</fullName>
    <label>Preferred Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>JN_Locations</valueSetName>
    </valueSet>
</CustomField>