force-app/main/default/objects/Opportunity/fields/Preferred_Time_and_Date_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time_and_Date_of_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Time and Date of Contact</label>
    <type>DateTime</type>
</CustomField>