force-app/main/default/objects/Opportunity/fields/Process_Application_via_CSR_Modu__c.field-meta.xml
<CustomField>
    <fullName>Process_Application_via_CSR_Modu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Application via CSR Modu</label>
    <type>Checkbox</type>
</CustomField>