force-app/main/default/objects/Opportunity/fields/Processing_Fees_inc_GCT__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fees_inc_GCT__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processing Fees inc GCT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>