force-app/main/default/objects/Opportunity/fields/Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Details</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Loan_Calculator__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Product Details</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Loan_Calculator__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>