force-app/main/default/objects/Opportunity/fields/Product_Details_Calculations__c.field-meta.xml
<CustomField>
    <fullName>Product_Details_Calculations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Details Calculations</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Loan Calculation must be Product details Record Type</errorMessage>
        <filterItems>
            <field>Loan_Calculator__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Product Details</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Loan_Calculator__c</referenceTo>
    <relationshipLabel>Opportunities (Product Details Calculations)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>