force-app/main/default/objects/Opportunity/fields/Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_of_Interest__c</fullName>
    <label>Product of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Group_of_Interest</valueSetName>
    </valueSet>
</CustomField>