force-app/main/default/objects/Opportunity/fields/Product_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Product_Purchased__c</fullName>
    <label>Product Purchased</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Purchase Place Holder</fullName>
            </value>
            <value>
                <fullName>JN Visa - Classic</fullName>
            </value>
            <value>
                <fullName>JN Visa - Gold</fullName>
            </value>
            <value>
                <fullName>JN Bank Mortgage - Balloon Payment</fullName>
            </value>
            <value>
                <fullName>JN Bank Mortgage - Extended Payment Options</fullName>
            </value>
            <value>
                <fullName>JN Bank Mortgage - Graduated Mortgage</fullName>
            </value>
            <value>
                <fullName>JN Bank Mortgage - Payment Holiday</fullName>
            </value>
            <value>
                <fullName>JN Bank Mortgage - Variable Rate Options</fullName>
            </value>
            <value>
                <fullName>JN Bank Adjustable Rate Mortgage</fullName>
            </value>
            <value>
                <fullName>JN Bank Mortgage - Fixed Rate Options</fullName>
            </value>
            <value>
                <fullName>JN Bank Mortgage Plus</fullName>
            </value>
            <value>
                <fullName>3JR/JDF Mortgage</fullName>
            </value>
            <value>
                <fullName>JN Bank Home Enhancement Loan Plan</fullName>
            </value>
            <value>
                <fullName>JN Bank Home Equity Loan</fullName>
            </value>
            <value>
                <fullName>JN Bank Mortgage – Commercial</fullName>
            </value>
            <value>
                <fullName>JN Bank Re-Advance Loan</fullName>
            </value>
            <value>
                <fullName>JN Bank Mortgage – Residential</fullName>
            </value>
            <value>
                <fullName>JN Bank/NHT Joint Fin Program</fullName>
            </value>
            <value>
                <fullName>JN Bank Baby Registry Account</fullName>
            </value>
            <value>
                <fullName>JN Bank Bridal Registry Account</fullName>
            </value>
            <value>
                <fullName>JN Bank Business Account</fullName>
            </value>
            <value>
                <fullName>JN Way Deposit Account</fullName>
            </value>
            <value>
                <fullName>JN Bank Destiny Account</fullName>
            </value>
            <value>
                <fullName>JN Bank Direct Gain Account</fullName>
            </value>
            <value>
                <fullName>JN Bank Easi-Save Account</fullName>
            </value>
            <value>
                <fullName>JN Bank First Class Account</fullName>
            </value>
            <value>
                <fullName>JN Bank Foreign Currency Savings Account</fullName>
            </value>
            <value>
                <fullName>JN Bank High Yield Account</fullName>
            </value>
            <value>
                <fullName>JN Bank Be Wise</fullName>
            </value>
            <value>
                <fullName>JN Bank Business Chequing Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>