force-app/main/default/objects/Opportunity/fields/Property_Title_Information_Folio__c.field-meta.xml
<CustomField>
    <fullName>Property_Title_Information_Folio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Title Information - Folio</label>
    <length>40</length>
    <type>Text</type>
</CustomField>