force-app/main/default/objects/Opportunity/fields/Property_Title_information_Vol__c.field-meta.xml
<CustomField>
    <fullName>Property_Title_information_Vol__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Property Title information - Vol</label>
    <length>40</length>
    <type>Text</type>
</CustomField>