force-app/main/default/objects/Opportunity/fields/Proposed_Savings__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Savings__c</fullName>
    <label>Proposed Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>