force-app/main/default/objects/Opportunity/fields/PushCount__c.field-meta.xml
<CustomField>
    <fullName>PushCount__c</fullName>
    <label>PushCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>