force-app/main/default/objects/Opportunity/fields/Receive_Review_and_Upload_Suspension_Me__c.field-meta.xml
<CustomField>
    <fullName>Receive_Review_and_Upload_Suspension_Me__c</fullName>
    <label>Receive, Review and Upload Suspension Me</label>
    <summarizedField>Loan_Documents__c.CreatedDate</summarizedField>
    <summaryForeignKey>Loan_Documents__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>