force-app/main/default/objects/Opportunity/fields/Receive_Review_Upload_Suspension_Memo__c.field-meta.xml
<CustomField>
    <fullName>Receive_Review_Upload_Suspension_Memo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive, Review &amp; Upload Suspension Memo</label>
    <type>Checkbox</type>
</CustomField>