force-app/main/default/objects/Opportunity/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <label>Record Adjudication&#39;s Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>