force-app/main/default/objects/Opportunity/fields/Record_Lock__c.field-meta.xml
<CustomField>
    <fullName>Record_Lock__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether the record is locked or unlocked</description>
    <label>Lock this Opportunity?</label>
    <type>Checkbox</type>
</CustomField>