force-app/main/default/objects/Opportunity/fields/Relationship_to_Card_Holder__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Card_Holder__c</fullName>
    <label>Relationship to Card Holder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Familial_Relationship</valueSetName>
    </valueSet>
</CustomField>