force-app/main/default/objects/Opportunity/fields/Repayment_Method__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Method__c</fullName>
    <label>Repayment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Repayment_Method</valueSetName>
    </valueSet>
</CustomField>